Repurposed repo for homework

--- a/HW2/index.html
+++ b/HW2/index.html
@@ -19,12 +19,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-6">
+            <div class="col-lg-6">
                 <svg id='scatterplot' width="100%" viewBox="0 0 500 400"></svg>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-6">
+            <div class="col">
                 <svg id='barchart' width="100%" viewBox="0 0 500 400"></svg>
             </div>
         </div>
